made changes to home page

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,11 @@
 canvas {
-    position:fixed;
+    position:absolute;
     top: 0;
     left: 0;
+    padding:0;
+    margin:0
+}
+
+.canvas {
+    position:absolute
 }
