--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,7 @@
 canvas {
-    position:absolute;
+    position:fixed;
     top: 0;
     left: 0;
     padding:0;
     margin:0
-}
-
-.canvas {
-    position:absolute
 }
