--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -89,5 +89,8 @@
    <svg id="circle" viewBox="0 0 100 100">
       <path d="M50 16c26 0 46 8 46 34S77 80 51 80 4 76 4 50s20-34 46-34Z" />
    </svg>
+   <svg id="bow" viewBox="0 0 100 100">
+      <path d="M50 58c26 0 44 28 44-12 0-48-26-6-40-5-15 0-49 61-48 27 2-78 18-10 44-10Z" />
+   </svg>
 <canvas #renderCanvas id="canvas"></canvas>
 
