--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -92,5 +92,7 @@
    <svg id="bow" viewBox="0 0 100 100">
       <path d="M50 58c26 0 44 28 44-12 0-48-26-6-40-5-15 0-49 61-48 27 2-78 18-10 44-10Z" />
    </svg>
-<canvas #renderCanvas id="canvas"></canvas>
+<canvas #renderCanvas id="canvas">
+   <p>asdasdsa</p>
+</canvas>
 
