--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,4 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<router-outlet></router-outlet>
+<app-home></app-home>
