--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,91 +1,59 @@
-<div class="canvas"></div>
-   <main>
-      <div class="block1" style="width:30%">
-         <h1>HTML Ipsum Presents</h1>
-      
-         <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-         
-         <h2>Header Level 2</h2>
-         
-         <ol>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-         </ol>
-         
-         <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
-         
-         <h3>Header Level 3</h3>
-         
-         <ul>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-         </ul>
-         <h1>HTML Ipsum Presents</h1>
-         
-         <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-         
-         <h2>Header Level 2</h2>
-         
-         <ol>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-         </ol>
+   <section>
+      <div class="title">
+         <h1 class="title1" >Hi! </h1>
+         <h1 class="title2">I'm Stanley. </h1>
+         <h1 class="title3">Welcome to my website! </h1>
       </div>
-      
-      <div class="block2" style="width:30%">
-         <h1>HTML Ipsum Presents</h1>
+
+      <div class="block1">
+         <h3>Welcome! I'm Stanley, an aspiring software developer and a computer engineering student at the University of Waterloo. Check out some of my stuff :)</h3>
+         <h3>Contact me here:</h3>
          
-         <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-         
-         <h2>Header Level 2</h2>
-         
-         <ol>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-         </ol>
-         
-         <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
-         
-         <h3>Header Level 3</h3>
-         
-         <ul>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-         </ul>
+         <a style="padding-right: 10px"href="mailto:s229tang@uwaterloo.ca">
+            <img src="./assets/icons8-mail.svg"/>
+         </a>
+         <a style="padding-right: 10px"href="https://github.com/stantang26">
+            <img src="./assets/icons8-github.svg"/>
+         </a>
+         <a style="padding-right: 10px"href="https://www.linkedin.com/in/stanley-tang26/">
+            <img src="./assets/icons8-linkedin-circled.svg"/>
+         </a>
       </div>
+      <div class="filler"></div>
       
-      <div class="block1" style="width:30%">
-         <h1>HTML Ipsum Presents</h1>
       
-         <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-         
-         <h2>Header Level 2</h2>
-         
-         <ol>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-         </ol>
-         
-         <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
-         
-         <h3>Header Level 3</h3>
-         
-         <ul>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-         </ul>
-         <h1>HTML Ipsum Presents</h1>
-         
-         <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-         
-         <h2>Header Level 2</h2>
-         
-         <ol>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-         </ol>
+      <div class="block2" >
+         <h1>VideoShare</h1>
+         <p style="display: inline;">A video sharing platform that allows users to view and upload videos. Built using MERN stack with Amazon S3 for cloud storage. </p>
+         <p class="tools">MongoDB | Express | React | Node | S3 </p>
+         <a style="padding-right: 10px"href="https://github.com/stantang26/videoshare-public" target="_blank"> <img src="./assets/icons8-github-black.svg"/></a>
+         <a href="https://github.com/stantang26/videoshare-public" target="_blank"><img src="./assets/icons8-internet-50.png"/></a>
       </div>
-   </main>
+
+      <div class="filler"></div>
+
+      <div class="block3" >
+         <h1>Unchained</h1>
+         <p>Top down mouse and keyboard shooter game. Built using Java canvas graphics and multithreaded processing for enemy and object detection.</p>
+         <p class="tools">Java </p>
+         <a href="https://github.com/stantang26/2D-Dynamic-Video-Game" target="_blank"><img src="./assets/icons8-github-black.svg"/></a>
+      </div>
+
+      <div class="filler"></div>
+      
+      <div class="block4" >
+         <h1>Colosseum </h1>
+         <p>Arcade style video game with keyboard controls. Built using JFrame graphics. </p>
+         <p class="tools">Java </p>
+         <a href="https://github.com/stantang26/Arcade-Style-Game" target="_blank"><img src="./assets/icons8-github-black.svg"/></a>
+      </div>
+
+   
+    
+   </section>
+
+   
+      
    <svg id="circle" viewBox="0 0 100 100">
       <path d="M50 16c26 0 46 8 46 34S77 80 51 80 4 76 4 50s20-34 46-34Z" />
    </svg>
