--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,23 +6,116 @@ canvas {
     margin:0;
     z-index:-100
 }
-main {
-    position: absolute;
+section{
+    display: grid;
+    grid-template-columns: repeat(16,1fr);
 }
+
 .block1 {
-    position:relative;
-    background-color: rgba(255, 5, 5, 0.3);
-    z-index: -1000;
-    padding: 10px;
+    grid-column: 9/16;
+    background-color: rgba(0, 0, 0, 1);
+    color:white;
+    z-index: 1;
+    padding: 15px;
+    padding-left: 30px;
+    padding-right:30px;
+    float: right;
+    margin-top:900px;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+}
+
+.title{
+    grid-column: 6/12;
+    color:white;
+    z-index: -1;
+    padding: 0px;
+    margin-top:130px;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+}
+
+.title1{
+    display: inline-block;
+    padding-inline-end: 10px;
+    animation-fill-mode: backwards;
+    animation: fadeIn;
+    animation-duration:3s;
+}
+
+.title2{
+    display: inline-block;
+    animation: fadeIn;
+    animation-duration:3s;
+    animation-fill-mode: backwards;
+    margin-bottom: 0px;
+    animation-delay: 1s;
+}
+
+.title3{
+    display: inline-block;
+    margin-top:0px;
+    animation: fadeIn;
+    animation-duration:3s;
+    animation-fill-mode: backwards;
+    animation-delay: 3s;
 }
 
 .block2 {
-    position:relative;
-    background-color: rgba(255,255,255,0.3);
-    z-index: -1;
-    padding: 10px;
+    grid-column: 3/7;
+    background-color: rgba(255, 254, 254, 1);
+    z-index: 1;
+    padding: 15px;
+    padding-bottom: 30px;
+    margin-top:100px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    right:0;
+    float:right;
+    font-size: 18px;
+    box-shadow:3px 3px ;
+
+
+}
+.filler{
+    grid-column: 1/16;
+    height: 400px;
+}
+
+.tools {
+    font-size: 16px;
+    color: skyblue
+}
+.block3 {
+    grid-column: 11/15;
+    background-color: rgba(255, 254, 254, 1);
+    z-index: 1;
+    padding: 15px;
+    margin-top:100px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    right:0;
+    font-size: 18px;
+    padding-bottom: 30px;
+    box-shadow:3px 3px;
     float:right;
 }
+.block4 {
+    grid-column: 3/7;
+    background-color: rgba(255, 254, 254, 1);
+    z-index: -1;
+    padding: 15px;
+    margin-bottom: 330px;
+    margin-top:100px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    right:0;
+    font-size: 18px;
+    padding-bottom: 30px;
+    box-shadow:3px 3px;
+    float:right;
+}
+
+
 
 svg {
     display:none
