--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
          <p style="display: inline;">A video sharing platform that allows users to view and upload videos. Built using MERN stack with Amazon S3 for cloud storage. </p>
          <p class="tools">MongoDB | Express | React | Node | S3 </p>
          <a style="padding-right: 10px"href="https://github.com/stantang26/videoshare-public" target="_blank"> <img src="./assets/icons8-github-black.svg"/></a>
-         <a href="https://github.com/stantang26/videoshare-public" target="_blank"><img src="./assets/icons8-internet-50.png"/></a>
+         <a href="http://34.229.186.203/home" target="_blank"><img src="./assets/icons8-internet-50.png"/></a>
       </div>
 
       <div class="filler"></div>
